--- a/components/About/Mission/Mission.module.css
+++ b/components/About/Mission/Mission.module.css
@@ -60,7 +60,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .Partnering {
+    .Mission {
         padding-left: 10%;
         padding-right: 10%;
     }
