--- a/components/Join/Students/StudentsInfo.module.css
+++ b/components/Join/Students/StudentsInfo.module.css
@@ -1,8 +1,7 @@
 .StudentsInfo {
     display: flex;
     flex-direction: column;
-    padding-left: 25%;
-    padding-right: 25%;
+    padding: 0% 25% 10% 25%;
     color: white;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
