--- a/components/Hero/Header/Header.module.css
+++ b/components/Hero/Header/Header.module.css
@@ -4,8 +4,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 2%;
-    padding-left: 4%;
-    padding-right: 4%;
+    padding-left: 10%;
+    padding-right: 10%;
     padding-top: 4%;
     font-size: 14px;
     width: 100%;
@@ -18,14 +18,14 @@
 
 .pagesContainerHeader {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     color: white;
     text-align: right;
-    row-gap: 10px;
+    column-gap: 35px;
     position: absolute;
-    right: 40px;
+    right: 100px;
     font-size: 18px;
-    top: 50px;
+    top: 70px;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -41,7 +41,14 @@
 }
 
 .headerLogoContainer {
-    width: 3%;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hamburgerContainer {
+    width: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -114,12 +121,23 @@
     position: absolute;
     top: 5%;
 }
+@media screen and (max-width: 1200px) {
+    .pagesContainerHeader {
+        top: 60px;
+    }
+}
+
 
 @media screen and (max-width: 700px) {
     .headerLogoContainer {
         padding-left: 2%;
+        width: 40vw;
+    }
+    .hamburgerContainer {
+        padding-left: 2%;
         width: 8vw;
     }
+
 
     .pagesContainerHeader {
         display: none;
@@ -127,9 +145,10 @@
 
     .pagesDropDown {
         display: block;
+
     }
 
     .Header {
-        padding: 4%;
+        padding: 10%;
     }
 }
