updated hero title

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -24,8 +24,11 @@
 
 .HeroHeading {
 
-    font-family: 'Druk';
-    font-size: 60px;
+    font-family: 'Crimson Text', serif;
+    letter-spacing: -0.06em;
+    font-size: 72px;
+    line-height: 100%;
+    color: #fff;
 }
 
 .HeroHeadingStartup {
